--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -29,6 +29,7 @@
 .expense-item__price {
   font-size: 1rem;
   font-weight: bold;
+  text-align: center;
   color: white;
   background-color: #40005d;
   border: 1px solid white;
